<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">
<TextView
    android:id="@+id/display_order"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text=""
    android:textSize="18sp"
    android:textStyle="bold"
    android:layout_marginTop="20dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    />
    <TextView
        android:id="@+id/delivery_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_delivery_method"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_order"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@+id/delivery_method"
        app:layout_constraintStart_toStartOf="parent">
        <RadioButton
            android:id="@+id/same_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/same_day_messenger_service"
            android:textColor="@color/colorPrimaryDark"
            android:onClick="onRadioButtonClicked"
            />
        <RadioButton
            android:id="@+id/next_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_day_ground_delivery"
            android:textColor="@color/colorPrimaryDark"
            android:onClick="onRadioButtonClicked"
            />
        <RadioButton
            android:id="@+id/pick_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_up"
            android:textColor="@color/colorPrimaryDark"
            android:onClick="onRadioButtonClicked"
            />


    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>